tests/backend/checkmach/fail2.output
File "fail2.ml", line 1:
Error: Annotation check for noalloc failed on function camlFail2__test_HIDE_NAME
