tests/backend/checkmach/fail2.ml
let[@noalloc_strict] test x = (x,x)
